fix: 에어비엔비 컨벤션 적용이 되지 않는 이슈 해결

--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -26,6 +26,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*", "vite.config.ts", "tailwind.config.js"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
