--- a/FE/.eslintrc.json
+++ b/FE/.eslintrc.json
@@ -1,28 +1,49 @@
 {
   "root": true,
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "project": "./FE/tsconfig.json",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "plugins": ["@typescript-eslint", "react", "prettier"],
-  "extends": [
-    "airbnb",
-    "airbnb-typescript",
-    "airbnb/hooks",
-    "prettier",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
-  ],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": ["./FE/tsconfig.json"]
+        "ecmaVersion": 2020,
+        "sourceType": "module",
+        "project": "./tsconfig.json",
+        "ecmaFeatures": {
+          "jsx": true
+        }
+      },
+      "plugins": ["@typescript-eslint", "react", "prettier"],
+      "extends": [
+        "airbnb",
+        "airbnb-typescript",
+        "airbnb/hooks",
+        "prettier",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended"
+      ],
+      "settings": {
+        "import/resolver": {
+          "typescript": {
+            "alwaysTryTypes": true,
+            "project": "./tsconfig.json"
+          }
+        }
+      }
+    },
+    {
+      "files": ["*.js"],
+      "parser": "espree",
+      "extends": ["eslint:recommended", "prettier"],
+      "env": {
+        "node": true,
+        "es6": true
+      },
+      "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+      },
+      "rules": {
+        "prettier/prettier": "error"
       }
     }
   ],
@@ -33,8 +54,7 @@
     "import/resolver": {
       "node": {
         "extensions": [".js", ".ts", ".tsx", ".json"]
-      },
-      "typescript": {}
+      }
     }
   },
   "rules": {
