--- a/FE/.eslintrc.json
+++ b/FE/.eslintrc.json
@@ -68,6 +68,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "no-console": "off"
+    "no-console": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
