[#6] 전체 레이아웃을 만든다 (#49)
* chore: shadcn 설정

* style: shadcn sidebar ui 컴포넌트 적용

* style: 전체 레이아웃 구성

--- a/FE/.eslintrc.json
+++ b/FE/.eslintrc.json
@@ -31,6 +31,15 @@
       }
     },
     {
+      "files": ["vite.config.ts"],
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      },
+      "rules": {
+        "no-unused-vars": "off"
+      }
+    },
+    {
       "files": ["*.js"],
       "parser": "espree",
       "extends": ["eslint:recommended", "prettier"],
@@ -59,6 +68,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "no-console": "off"
+    "no-console": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
