--- a/FE/package.json
+++ b/FE/package.json
@@ -33,7 +33,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vite": "^5.4.8",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -62,7 +63,6 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.0",
-    "typescript-eslint": "^8.7.0",
-    "vite-plugin-svgr": "^4.3.0"
+    "typescript-eslint": "^8.7.0"
   }
 }
