--- a/FE/package.json
+++ b/FE/package.json
@@ -33,8 +33,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vite": "^5.4.8",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
