--- a/be/package.json
+++ b/be/package.json
@@ -27,9 +27,11 @@
     "@types/express-session": "^1.18.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.1",
+    "ioredis": "^5.4.1",
     "memorystore": "^1.6.7",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.0",
