--- a/FE/package.json
+++ b/FE/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query": "^4.36.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +29,7 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-svg": "^16.1.34",
     "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.4",
@@ -42,6 +43,7 @@
     "@types/axios": "^0.14.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-query": "^1.2.9",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
