--- a/FE/package.json
+++ b/FE/package.json
@@ -62,7 +62,6 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.0",
-    "typescript-eslint": "^8.7.0",
-    "vite-plugin-svgr": "^4.3.0"
+    "typescript-eslint": "^8.7.0"
   }
 }
