--- a/FE/package.json
+++ b/FE/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^4.36.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.7.7",
+    "axios-mock-adapter": "^2.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
