--- a/be/package.json
+++ b/be/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "@types/express-session": "^1.18.0",
     "class-transformer": "^0.5.1",
