refact: BE 디렉토리로 이동

--- a/be/docker-compose.backend.local.yml
+++ b/be/docker-compose.backend.local.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   backend:
     build:
-      context: ./BE
+      context: .
     container_name: QLab-Service-Server
     ports:
       - "3000:3000"
