--- a/BE/Dockerfile
+++ b/BE/Dockerfile
@@ -17,7 +17,4 @@ RUN npm run build
 
 EXPOSE 3000
 
-CMD export DB_PASSWORD=$(cat $DB_PASSWORD_FILE) && \
-    export QUERY_DB_PASSWORD=$(cat $QUERY_DB_PASSWORD_FILE) && \
-    export SESSION_SECRET=$(cat $SESSION_SECRET_FILE) && \
-    npm run start:prod
+CMD npm run start:prod
