--- a/be/package.json
+++ b/be/package.json
@@ -33,10 +33,12 @@
     "dotenv": "^16.4.5",
     "express-session": "^1.18.1",
     "ioredis": "^5.4.1",
+    "jest-mock-extended": "^4.0.0-beta1",
     "memorystore": "^1.6.7",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "testcontainers": "^10.14.0",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.2"
   },
@@ -60,7 +62,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
