--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   frontend:
     build:
@@ -14,7 +14,24 @@ services:
     expose:
       - 3000
     environment:
-      - NODE_ENV=production
+      DB_TYPE: mysql
+      DB_HOST: 10.0.1.7
+      DB_PORT: 3306
+      DB_USERNAME: root
+      DB_DATABASE: qlab
+
+      QUERY_DB_TYPE: mysql
+      QUERY_DB_HOST: 10.0.1.7
+      QUERY_DB_PORT: 3307
+      QUERY_DB_USER: root
+      QUERY_DB_DATABASE: qlab
+
+      REDIS_HOST: 10.0.1.7
+      REDIS_PORT: 6379
+
+      DB_PASSWORD: ${DB_PASSWORD}
+      QUERY_DB_PASSWORD: ${QUERY_DB_PASSWORD}
+      SESSION_SECRET: ${SESSION_SECRET}
 
   nginx:
     build:
