--- a/FE/.eslintrc.json
+++ b/FE/.eslintrc.json
@@ -28,6 +28,10 @@
             "project": "./tsconfig.json"
           }
         }
+      },
+      "rules": {
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off"
       }
     },
     {
