feat: .csv 파일 데이터를 테이블에 추가

--- a/BE/docker-compose.backend.local.yml
+++ b/BE/docker-compose.backend.local.yml
@@ -54,6 +54,7 @@ services:
       MYSQL_DATABASE: qlab
     ports:
       - "3307:3306"
+    command: --local-infile=1
     volumes:
       - ../db/query:/var/lib/mysql
     networks:
