--- a/FE/Dockerfile
+++ b/FE/Dockerfile
@@ -3,11 +3,9 @@ FROM node:22 AS build
 
 WORKDIR /app
 
-COPY package.json /app
+COPY package*.json /app
 
 RUN npm config set registry https://registry.npmjs.org/
-
-RUN npm install vite
 
 RUN npm install
 
