--- a/FE/package.json
+++ b/FE/package.json
@@ -36,7 +36,6 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "vite": "^5.4.8",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
@@ -68,6 +67,7 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.0",
-    "typescript-eslint": "^8.7.0"
+    "typescript-eslint": "^8.7.0",
+    "vite": "^5.4.11"
   }
 }
