--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,14 @@ server {
     listen 80;
     server_name q-lab.site;
 
+    return 301 http:///www.q-lab.site$request_uri;
+}
+
+
+server {
+    listen 80;
+    server_name www.q-lab.site;
+
     # 리액트 웹 서버로 라우팅
     location / {
         proxy_pass http://frontend:80;
