--- a/FE/package.json
+++ b/FE/package.json
@@ -25,12 +25,14 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^4.36.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "ace-builds": "^1.36.5",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-ace": "^13.0.0",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-svg": "^16.1.34",
