--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,18 @@
 server {
     listen 80;
-    server_name q-lab.site;
+    server_name q-lab.site www.q-lab.site;
+
+    # https로 리다이렉트
+    return 301 https://www.q-lab.site$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name www.q-lab.site;
+
+    # SSL 인증서 경로
+    ssl_certificate /ssl/live/www.q-lab.site/fullchain.pem;
+    ssl_certificate_key /ssl/live/www.q-lab.site/privkey.pem;
 
     # 리액트 웹 서버로 라우팅
     location / {
