--- a/FE/.eslintrc.json
+++ b/FE/.eslintrc.json
@@ -31,7 +31,8 @@
       },
       "rules": {
         "react/jsx-uses-react": "off",
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "prettier/prettier": ["error", { "endOfLine": "lf" }]
       }
     },
     {
