--- a/FE/.prettierrc
+++ b/FE/.prettierrc
@@ -2,5 +2,6 @@
   "plugins": ["prettier-plugin-tailwindcss"],
   "singleQuote": true,
   "trailingComma": "es5",
-  "semi": false
+  "semi": false,
+  "endOfLine": "lf"
 }
