--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name www.q-lab.site;
+    server_name q-lab.site www.q-lab.site;
 
     # SSL 인증서 경로
     ssl_certificate /ssl/live/www.q-lab.site/fullchain.pem;
