--- a/BE/package.json
+++ b/BE/package.json
@@ -37,11 +37,14 @@
     "jest-mock-extended": "^4.0.0-beta1",
     "memorystore": "^1.6.7",
     "mysql2": "^3.11.3",
+    "nest-winston": "^1.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "testcontainers": "^10.14.0",
     "typeorm": "^0.3.20",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
