--- a/FE/package.json
+++ b/FE/package.json
@@ -41,7 +41,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "vite": "^5.4.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -72,7 +73,6 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.0",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.11"
+    "typescript-eslint": "^8.7.0"
   }
 }
