--- a/FE/package.json
+++ b/FE/package.json
@@ -35,14 +35,15 @@
     "react": "^18.3.1",
     "react-ace": "^13.0.0",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-query": "^3.39.3",
     "react-svg": "^16.1.34",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
