--- a/BE/package.json
+++ b/BE/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/BE/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -38,6 +38,7 @@
     "memorystore": "^1.6.7",
     "mysql2": "^3.11.3",
     "nest-winston": "^1.9.7",
+    "nestjs-zod": "^4.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "testcontainers": "^10.14.0",
