--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "ace-builds": "^1.36.5",
+    "nestjs-zod": "^4.2.0",
     "react-ace": "^13.0.0",
     "zod": "^3.23.8"
   }
