feature: 백엔드 도커파일을 루트 디렉토리에서 빌드하도록 수정

--- a/BE/Dockerfile
+++ b/BE/Dockerfile
@@ -1,14 +1,22 @@
 FROM node:20
 
-WORKDIR /app
+WORKDIR /app/
 
 RUN npm install -g pm2
 
-COPY package*.json /app
+COPY ./package*.json /app
 
 RUN npm install
 
-COPY . /app
+WORKDIR /app/BE/
+
+COPY ./BE/package*.json /app/BE/
+
+RUN npm install
+
+COPY ./BE /app/BE
+
+COPY ./schemas /app/schemas
 
 RUN npm run build
 
