--- a/FE/package.json
+++ b/FE/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -36,6 +37,7 @@
     "react-ace": "^13.0.0",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
+    "react-hook-form": "^7.53.2",
     "react-query": "^3.39.3",
     "react-svg": "^16.1.34",
     "shadcn-ui": "^0.2.3",
@@ -43,7 +45,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
