chore: 스키마 폴더 경로를 설정파일에 추가

--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -24,9 +24,10 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@schemas/*": ["../schemas/*"]
     }
   },
-  "include": ["src/**/*", "vite.config.ts"],
+  "include": ["src/**/*", "vite.config.ts", "../schemas/**/*"],
   "exclude": ["node_modules", "dist"]
 }
