refactor : 도커 빌드 파일 이미지 alpine 으로 변경 테스트환경 도커컴포즈 프로젝트 변경된 구조에 맞게 수정

--- a/BE/docker-compose.backend.local.yml
+++ b/BE/docker-compose.backend.local.yml
@@ -2,7 +2,8 @@ version: '3'
 services:
   backend:
     build:
-      context: .
+      context: ..
+      dockerfile: BE/Dockerfile
     container_name: QLab-Service-Server
     ports:
       - "3000:3000"
@@ -46,7 +47,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ../db/server:/var/lib/mysql 
+      - ../db/server:/var/lib/mysql
     networks:
       - backend
 
