--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,19 @@ server {
 
 server {
     listen 443 ssl;
-    server_name q-lab.site www.q-lab.site;
+    server_name q-lab.site;
+
+    # https://q-lab.site -> https://www.q-lab.site로 리다이렉트
+    return 301 https://www.q-lab.site$request_uri;
+
+    # SSL 인증서 경로
+    ssl_certificate /ssl/live/www.q-lab.site/fullchain.pem;
+    ssl_certificate_key /ssl/live/www.q-lab.site/privkey.pem;
+}
+
+server {
+    listen 443 ssl;
+    server_name www.q-lab.site;
 
     # SSL 인증서 경로
     ssl_certificate /ssl/live/www.q-lab.site/fullchain.pem;
