refactor : zod 적용으로 인한 프로젝트 구조 변경에 따라 도커파일 수정 스키마 내보낼 때 type 과 일반객체 구분

--- a/FE/Dockerfile.test
+++ b/FE/Dockerfile.test
@@ -1,16 +1,24 @@
 # 리액트 빌드
-FROM node:22 AS build
+FROM node:22-alpine
 
-WORKDIR /app
+WORKDIR /app/
 
-COPY package.json /app
+ENV VITE_BASE_URL=https://www.q-lab.site/api
+
+COPY ./package*.json /app
 
 RUN npm config set registry https://registry.npmjs.org/
 
-RUN npm install vite
+RUN npm install
+
+WORKDIR /app/FE/
+
+COPY ./FE/package*.json /app/FE/
 
 RUN npm install
 
-COPY . /app
+COPY ./FE /app/FE
+
+COPY ./schemas /app/schemas
 
 CMD npx vite build
