--- a/FE/Dockerfile
+++ b/FE/Dockerfile
@@ -1,24 +1,32 @@
 # 리액트 빌드
-FROM node:22 AS build
+FROM node:22-alpine AS build
 
-WORKDIR /app
+WORKDIR /app/
 
 ENV VITE_BASE_URL=https://www.q-lab.site/api
 
-COPY package*.json /app
+COPY ./package*.json /app
 
 RUN npm config set registry https://registry.npmjs.org/
 
 RUN npm install
 
-COPY . /app
+WORKDIR /app/FE/
+
+COPY ./FE/package*.json /app/FE/
+
+RUN npm install
+
+COPY ./FE /app/FE
+
+COPY ./schemas /app/schemas
 
 RUN npx vite build
 
 # http 서버 생성
 FROM nginx:alpine
 
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/FE/dist /usr/share/nginx/html
 
 EXPOSE 80
 
