--- a/BE/package.json
+++ b/BE/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/BE/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@testcontainers/redis": "^10.15.0",
     "@types/express-session": "^1.18.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -38,13 +39,15 @@
     "memorystore": "^1.6.7",
     "mysql2": "^3.11.3",
     "nest-winston": "^1.9.7",
+    "nestjs-zod": "^4.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "testcontainers": "^10.14.0",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.2",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -93,6 +96,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFiles": ["<rootDir>/jest.setup.js"]
   }
 }
