--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 services:
   frontend:
     build:
-      context: ./FE
+      context: .
+      dockerfile: FE/Dockerfile
     container_name: QLab-Front-Server
     environment:
       VITE_BASE_URL: https://www.q-lab.site/api
@@ -12,7 +13,8 @@ services:
 
   backend:
     build:
-      context: ./BE
+      context: .
+      dockerfile: BE/Dockerfile
     container_name: QLab-Service-Server
     expose:
       - 3000
