--- a/BE/docker-compose.backend.local.yml
+++ b/BE/docker-compose.backend.local.yml
@@ -44,8 +44,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: db1004
       MYSQL_DATABASE: qlab
-    ports:
-      - "3306:3306"
+    expose:
+      - 3306
     volumes:
       - ../db/server:/var/lib/mysql
     networks:
@@ -57,9 +57,9 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: db1004
       MYSQL_DATABASE: qlab
-    ports:
-      - "3307:3306"
     command: --local-infile=1
+    expose:
+      - 3306
     volumes:
       - ../db/query:/var/lib/mysql
     networks:
@@ -68,8 +68,8 @@ services:
   redis:
     image: redis:latest
     container_name: redis
-    ports:
-      - "6379:6379"
+    expose:
+      - 6379
     volumes:
       - ../db/redis:/data
     networks:
